[gd_scene load_steps=3 format=2]

[ext_resource path="res://resource/my_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/SaveFileSettingsPopup.gd" type="Script" id=2]

[node name="SaveFileSettingsPopup" type="WindowDialog"]
visible = true
margin_right = 381.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "SAVE_FILE"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 365.0
margin_bottom = 33.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 52.0
margin_bottom = 33.0
text = "NAME"

[node name="FileName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 315.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "input file name here"
placeholder_text = "输入文件名"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 319.0
margin_right = 365.0
margin_bottom = 33.0
text = ".png"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 365.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 116.0
margin_bottom = 33.0
text = "SCALE_LEVEL"

[node name="ImgScale" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 33.0
min_value = 1.0
max_value = 32.0
value = 1.0
align = 1
prefix = "x"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 365.0
margin_bottom = 107.0

[node name="ImgInfo" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_right = 365.0
margin_bottom = 33.0
size_flags_horizontal = 3
text = "Expected Image Size: 32 x 32"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 111.0
margin_right = 365.0
margin_bottom = 147.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "- [color=#FFFF44]Duplicated file name, override[/color]"
text = "- Duplicated file name, override"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 151.0
margin_right = 365.0
margin_bottom = 184.0

[node name="Confirm" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_right = 180.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CONFIRM"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 184.0
margin_right = 365.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CANCEL"
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/FileName" to="." method="_on_FileName_text_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/ImgScale" to="." method="_on_ImgScale_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Cancel" to="." method="_on_Cancel_pressed"]
